Fix a radio selectable senator list style issue
Fix style issue where headers didn't line up with stats in radio selectable senator list.

--- a/frontend/components/SenatorList.module.css
+++ b/frontend/components/SenatorList.module.css
@@ -10,11 +10,6 @@
   padding-right: 2px;
 }
 
-.headers.radioHeaderMargin {
-  box-sizing: border-box;
-  padding-left: 46px;
-}
-
 .headers>div:first-child {
   margin-top: 4px;
   text-align: center;
